--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./style/img/eyelashes.png" type="image/x-icon">
+    <title>Аnna Tashlanova - Lashmaker expert</title>
     <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
