--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h1>Аnna Tashlanova</h1>
         <p>Lashmaker expert</p>
     </header>
+    <main>
+        <img class="imgAnna" src="./style/img/anna.png" title="Аnna Tashlanova" alt="Аnna Tashlanova" width="300">
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
