--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Аnna Tashlanova</h1>
-        <p>Lashmaker expert</p>
+        <h1 title="Аnna Tashlanova" class="title">
+            <span>Anna</span><span>Tashlanova</span>
+        </h1>
+        <h2>Lashmaker expert</h2>
     </header>
     <main>
         <img class="imgAnna" src="./style/img/anna.png" title="Аnna Tashlanova" alt="Аnna Tashlanova" width="300">
