--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1 title="Аnna Tashlanova" class="title">
             <span>Anna</span><span>Tashlanova</span>
         </h1>
-        <h2>Lashmaker expert</h2>
+        <h2>
+            <span>Lashmaker</span><span>expert</span>
+        </h2>
     </header>
     <main>
         <img class="imgAnna" src="./style/img/anna.png" title="Аnna Tashlanova" alt="Аnna Tashlanova" width="300">
